<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <TextView
        android:id="@+id/highscoreTxt"
        android:layout_width="186dp"
        android:layout_height="39dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="right"
        android:text="@string/highscore"
        android:textAllCaps="false"
        android:textColor="@color/greyc2"
        android:textSize="30sp"
        app:fontFamily="sans-serif-black"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.835"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.303" />

    <TextView
        android:id="@+id/highscoreVal"
        android:layout_width="139dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/highscorezero"
        android:textAllCaps="false"
        android:textColor="@color/greyc2"
        android:textSize="24sp"
        app:fontFamily="sans-serif-black"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.848"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.962" />

    <TextView
        android:id="@+id/bonusTxt"
        android:layout_width="186dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/_1x"
        android:textAllCaps="false"
        android:textColor="@color/greyc2"
        android:textSize="24sp"
        app:fontFamily="sans-serif-black"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/score2"
        android:layout_width="186dp"
        android:layout_height="58dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/bonus"
        android:textAllCaps="false"
        android:textColor="@color/greyc2"
        android:textSize="30sp"
        app:fontFamily="sans-serif-black"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.303" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="685dp"
        android:layout_height="131dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/card1"
            android:layout_width="32dp"
            android:layout_height="125dp"
            android:layout_weight="1"
            android:contentDescription="@string/card1"
            app:srcCompat="@drawable/greyc2"
            tools:layout_editor_absoluteX="43dp"
            tools:layout_editor_absoluteY="50dp" />

        <ImageView
            android:id="@+id/card2"
            android:layout_width="32dp"
            android:layout_height="125dp"
            android:layout_weight="1"
            android:contentDescription="@string/card2"
            app:srcCompat="@drawable/greyc2"
            tools:layout_editor_absoluteX="43dp"
            tools:layout_editor_absoluteY="50dp" />

        <ImageView
            android:id="@+id/card3"
            android:layout_width="32dp"
            android:layout_height="125dp"
            android:layout_weight="1"
            android:contentDescription="@string/card3"
            app:srcCompat="@drawable/greyc2"
            tools:layout_editor_absoluteX="43dp"
            tools:layout_editor_absoluteY="50dp" />

        <ImageView
            android:id="@+id/card4"
            android:layout_width="32dp"
            android:layout_height="125dp"
            android:layout_weight="1"
            android:contentDescription="@string/card4"
            app:srcCompat="@drawable/greyc2"
            tools:layout_editor_absoluteX="43dp"
            tools:layout_editor_absoluteY="50dp" />

        <ImageView
            android:id="@+id/card5"
            android:layout_width="32dp"
            android:layout_height="125dp"
            android:layout_weight="1"
            android:contentDescription="@string/card5"
            app:srcCompat="@drawable/greyc2"
            tools:layout_editor_absoluteX="43dp"
            tools:layout_editor_absoluteY="50dp" />

        <ImageView
            android:id="@+id/card6"
            android:layout_width="32dp"
            android:layout_height="125dp"
            android:layout_weight="1"
            android:contentDescription="@string/card6"
            app:srcCompat="@drawable/greyc2"
            tools:layout_editor_absoluteX="43dp"
            tools:layout_editor_absoluteY="50dp" />

        <ImageView
            android:id="@+id/card7"
            android:layout_width="32dp"
            android:layout_height="125dp"
            android:layout_weight="1"
            android:contentDescription="@string/card7"
            app:srcCompat="@drawable/greyc2"
            tools:layout_editor_absoluteX="43dp"
            tools:layout_editor_absoluteY="50dp" />

        <ImageView
            android:id="@+id/card8"
            android:layout_width="32dp"
            android:layout_height="125dp"
            android:layout_weight="1"
            android:contentDescription="@string/card8"
            app:srcCompat="@drawable/greyc2"
            tools:layout_editor_absoluteX="43dp"
            tools:layout_editor_absoluteY="50dp" />

        <ImageView
            android:id="@+id/card9"
            android:layout_width="32dp"
            android:layout_height="125dp"
            android:layout_weight="1"
            android:contentDescription="@string/card9"
            app:srcCompat="@drawable/greyc2"
            tools:layout_editor_absoluteX="43dp"
            tools:layout_editor_absoluteY="50dp" />

        <ImageView
            android:id="@+id/card10"
            android:layout_width="32dp"
            android:layout_height="125dp"
            android:layout_weight="1"
            android:contentDescription="@string/card10"
            app:srcCompat="@drawable/greyc2"
            tools:layout_editor_absoluteX="43dp"
            tools:layout_editor_absoluteY="50dp" />

        <ImageView
            android:id="@+id/card11"
            android:layout_width="32dp"
            android:layout_height="125dp"
            android:layout_weight="1"
            android:contentDescription="@string/card11"
            app:srcCompat="@drawable/greyc2"
            tools:layout_editor_absoluteX="43dp"
            tools:layout_editor_absoluteY="50dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/score"
        android:layout_width="186dp"
        android:layout_height="58dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/_0"
        android:textAllCaps="false"
        android:textColor="@color/greyc2"
        android:textSize="30sp"
        app:fontFamily="sans-serif-black"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.303" />

    <TextView
        android:id="@+id/gameStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_30"
        android:textColor="@color/greyc2"
        android:textSize="24sp"
        app:fontFamily="sans-serif-black"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/score" />

    <Button
        android:id="@+id/finishButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent"
        android:text="@string/try_again"
        android:textColor="@color/greyc2"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="31dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/score2"
        app:layout_constraintHorizontal_bias="0.74"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.091"
        app:srcCompat="@drawable/backbutton"
        android:contentDescription="@string/todo" />

</android.support.constraint.ConstraintLayout>
